--- a/bg_blackout_en.html
+++ b/bg_blackout_en.html
@@ -78,7 +78,7 @@
         This site is protesting against parts of the planned EU copyright reform, which will soon be adopted by the European Parliament.
     </p>
     <p>
-        The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Even authors who have to cede more to the publisher with the “private copying levy” (Article 12) are affected. This could significantly affect the freedom of opinion, art and the press.
+        The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Because of Article 12 creators and authors have a worse negotiation position than before towards publishers. This could significantly affect the freedom of opinion, art and the press.
     </p>
     <p>
         Therefore we ask you for it ...
