Better words for Article 12

--- a/bg_blackout_de_formal.html
+++ b/bg_blackout_de_formal.html
@@ -78,7 +78,7 @@
         Diese Seite protestiert gegen Teile der geplanten EU-Urheberrechtsreform, die bald vom Parlament der Europäischen Union verabschiedet werden soll.
     </p>
     <p>
-        Die geplante Reform könnte dazu führen, dass das freie Internet erheblich eingeschränkt wird. Selbst kleinste Unternehmen müssten fehleranfällige und technisch unausgereifte Upload-Filter für sämtliche ihrer Inhalte einsetzen (Artikel 13) und für minimale Textausschnitte aus Presseerzeugnissen Lizenzen erwerben, um das sogenannte Leistungsschutzrecht für Presseverleger einzuhalten (Artikel 11). Aufgrund von Artikel 12 haben Urheber und Autoren eine schlechtere Verhandlungsposition gegenüber Verlagen als zuvor. Dies könnte die Meinungs-, Kunst- und Pressefreiheit deutlich beeinträchtigen.
+        Die geplante Reform könnte dazu führen, dass das freie Internet erheblich eingeschränkt wird. Selbst kleinste Unternehmen müssten fehleranfällige und technisch unausgereifte Upload-Filter für sämtliche ihrer Inhalte einsetzen (Artikel 13) und für minimale Textausschnitte aus Presseerzeugnissen Lizenzen erwerben, um das sogenannte Leistungsschutzrecht für Presseverleger einzuhalten (Artikel 11). Zudem haben Urheber und Autoren aufgrund von Artikel 12 eine schlechtere Verhandlungsposition gegenüber Verlagen als zuvor.  Dies könnte die Meinungs-, Kunst- und Pressefreiheit deutlich beeinträchtigen.
     </p>
     <p>
         Wir bitten Sie deshalb darum ...
