--- a/blackout_en.html
+++ b/blackout_en.html
@@ -67,10 +67,10 @@
             This site is protesting against parts of the planned EU copyright reform, which will soon be adopted by the European Parliament.
         </p>
         <p>
-            The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Because of Article 12 creators and authors have a worse negotiation position than before towards publishers. This could significantly affect the freedom of opinion, art and the press.
+            The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Furthermore because of Article 12 creators and authors have a worse negotiation position than before towards publishers. This could significantly affect the freedom of opinion, art and the press.
         </p>
         <p>
-            Therefore we ask you for it ...
+            Therefore we ask you ...
         </p>
         <ul>
             <li><a href="https://saveyourinternet.eu/">... to contact the Members of the European Parliament and to inform them about your position on the planned reform.</a></li>
